// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render data with disabled items 1`] = `
<div
  class="columnListAdapter"
>
  <div
    class="columnListToolbarContainer"
  >
    <div
      class="columnListContainer firstVisibleColumnActive lastVisibleColumnActive"
    >
      <div
        class="columnList"
      >
        <div
          class="column"
        >
          <div
            class="item active selected"
          >
            <span
              class="buttons"
            >
              <span
                aria-label="su-check"
                class="button su-check clickable"
                role="button"
                tabindex="0"
              />
            </span>
            <span
              class="text"
            >
              <div
                aria-label="Page 1"
                class="croppedText"
                title="Page 1"
              >
                <div
                  aria-hidden="true"
                  class="front"
                >
                  Pag
                </div>
                <div
                  aria-hidden="true"
                  class="back"
                >
                  <span>
                    e 1
                  </span>
                </div>
                <div
                  class="whole"
                >
                  Page 1
                </div>
              </div>
            </span>
            <span
              class="indicator"
            />
            <span
              class="children"
            >
              <span
                aria-label="su-angle-right"
                class="su-angle-right"
              />
            </span>
          </div>
        </div>
        <div
          class="column"
        >
          <div
            class="item active disabled"
          >
            <span
              class="buttons"
            >
              <span
                aria-label="su-check"
                class="button su-check clickable"
                role="button"
                tabindex="0"
              />
            </span>
            <span
              class="text"
            >
              <div
                aria-label="Page 1.1"
                class="croppedText"
                title="Page 1.1"
              >
                <div
                  aria-hidden="true"
                  class="front"
                >
                  Page
                </div>
                <div
                  aria-hidden="true"
                  class="back"
                >
                  <span>
                     1.1
                  </span>
                </div>
                <div
                  class="whole"
                >
                  Page 1.1
                </div>
              </div>
            </span>
            <span
              class="indicator"
            />
            <span
              class="children"
            />
          </div>
        </div>
        <div
          class="column"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Render data with edit button 1`] = `
<div
  class="columnListAdapter"
>
  <div
    class="columnListToolbarContainer"
  >
    <div
      class="columnListContainer firstVisibleColumnActive lastVisibleColumnActive"
    >
      <div
        class="columnList"
      >
        <div
          class="column"
        >
          <div
            class="item"
          >
            <span
              class="buttons"
            >
              <span
                aria-label="su-pen"
                class="button su-pen clickable"
                role="button"
                tabindex="0"
              />
            </span>
            <span
              class="text"
            >
              <div
                aria-label="Page 1"
                class="croppedText"
                title="Page 1"
              >
                <div
                  aria-hidden="true"
                  class="front"
                >
                  Pag
                </div>
                <div
                  aria-hidden="true"
                  class="back"
                >
                  <span>
                    e 1
                  </span>
                </div>
                <div
                  class="whole"
                >
                  Page 1
                </div>
              </div>
            </span>
            <span
              class="indicator"
            />
            <span
              class="children"
            >
              <span
                aria-label="su-angle-right"
                class="su-angle-right"
              />
            </span>
          </div>
          <div
            class="item active"
          >
            <span
              class="buttons"
            >
              <span
                aria-label="su-pen"
                class="button su-pen clickable"
                role="button"
                tabindex="0"
              />
            </span>
            <span
              class="text"
            >
              <div
                aria-label="Page 2"
                class="croppedText"
                title="Page 2"
              >
                <div
                  aria-hidden="true"
                  class="front"
                >
                  Pag
                </div>
                <div
                  aria-hidden="true"
                  class="back"
                >
                  <span>
                    e 2
                  </span>
                </div>
                <div
                  class="whole"
                >
                  Page 2
                </div>
              </div>
            </span>
            <span
              class="indicator"
            />
            <span
              class="children"
            />
          </div>
        </div>
        <div
          class="column"
        >
          <div
            class="item active"
          >
            <span
              class="buttons"
            >
              <span
                aria-label="su-pen"
                class="button su-pen clickable"
                role="button"
                tabindex="0"
              />
            </span>
            <span
              class="text"
            >
              <div
                aria-label="Page 2.1"
                class="croppedText"
                title="Page 2.1"
              >
                <div
                  aria-hidden="true"
                  class="front"
                >
                  Page
                </div>
                <div
                  aria-hidden="true"
                  class="back"
                >
                  <span>
                     2.1
                  </span>
                </div>
                <div
                  class="whole"
                >
                  Page 2.1
                </div>
              </div>
            </span>
            <span
              class="indicator"
            />
            <span
              class="children"
            >
              <span
                aria-label="su-angle-right"
                class="su-angle-right"
              />
            </span>
          </div>
        </div>
        <div
          class="column"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Render data with loading column 1`] = `
<div
  class="columnListAdapter"
>
  <div
    class="columnListToolbarContainer"
  >
    <div
      class="columnListContainer firstVisibleColumnActive lastVisibleColumnActive"
    >
      <div
        class="columnList"
      >
        <div
          class="column"
        >
          <div
            class="item active"
          >
            <span
              class="buttons"
            />
            <span
              class="text"
            >
              <div
                aria-label="Page 1"
                class="croppedText"
                title="Page 1"
              >
                <div
                  aria-hidden="true"
                  class="front"
                >
                  Pag
                </div>
                <div
                  aria-hidden="true"
                  class="back"
                >
                  <span>
                    e 1
                  </span>
                </div>
                <div
                  class="whole"
                >
                  Page 1
                </div>
              </div>
            </span>
            <span
              class="indicator"
            />
            <span
              class="children"
            >
              <span
                aria-label="su-angle-right"
                class="su-angle-right"
              />
            </span>
          </div>
          <div
            class="item"
          >
            <span
              class="buttons"
            />
            <span
              class="text"
            >
              <div
                aria-label="Page 2"
                class="croppedText"
                title="Page 2"
              >
                <div
                  aria-hidden="true"
                  class="front"
                >
                  Pag
                </div>
                <div
                  aria-hidden="true"
                  class="back"
                >
                  <span>
                    e 2
                  </span>
                </div>
                <div
                  class="whole"
                >
                  Page 2
                </div>
              </div>
            </span>
            <span
              class="indicator"
            />
            <span
              class="children"
            />
          </div>
        </div>
        <div
          class="column"
        >
          <div
            class="loader"
          >
            <div
              class="spinner"
              style="width:40px;height:40px"
            >
              <div
                class="doubleBounce1"
              />
              <div
                class="doubleBounce2"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Render data with published and draft state 1`] = `
<div
  class="columnListAdapter"
>
  <div
    class="columnListToolbarContainer"
  >
    <div
      class="columnListContainer firstVisibleColumnActive lastVisibleColumnActive"
    >
      <div
        class="columnList"
      >
        <div
          class="column"
        >
          <div
            class="item active"
          >
            <span
              class="buttons"
            />
            <span
              class="text"
            >
              <div
                aria-label="Page 1"
                class="croppedText"
                title="Page 1"
              >
                <div
                  aria-hidden="true"
                  class="front"
                >
                  Pag
                </div>
                <div
                  aria-hidden="true"
                  class="back"
                >
                  <span>
                    e 1
                  </span>
                </div>
                <div
                  class="whole"
                >
                  Page 1
                </div>
              </div>
            </span>
            <span
              class="indicator"
            >
              <span
                class="draft"
              />
            </span>
            <span
              class="children"
            >
              <span
                aria-label="su-angle-right"
                class="su-angle-right"
              />
            </span>
          </div>
          <div
            class="item"
          >
            <span
              class="buttons"
            />
            <span
              class="text"
            >
              <div
                aria-label="Page 2"
                class="croppedText"
                title="Page 2"
              >
                <div
                  aria-hidden="true"
                  class="front"
                >
                  Pag
                </div>
                <div
                  aria-hidden="true"
                  class="back"
                >
                  <span>
                    e 2
                  </span>
                </div>
                <div
                  class="whole"
                >
                  Page 2
                </div>
              </div>
            </span>
            <span
              class="indicator"
            >
              <span
                class="published"
              />
              <span
                class="draft"
              />
            </span>
            <span
              class="children"
            />
          </div>
        </div>
        <div
          class="column"
        >
          <div
            class="loader"
          >
            <div
              class="spinner"
              style="width:40px;height:40px"
            >
              <div
                class="doubleBounce1"
              />
              <div
                class="doubleBounce2"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Render data with selection 1`] = `
<div
  class="columnListAdapter"
>
  <div
    class="columnListToolbarContainer"
  >
    <div
      class="columnListContainer firstVisibleColumnActive lastVisibleColumnActive"
    >
      <div
        class="columnList"
      >
        <div
          class="column"
        >
          <div
            class="item selected"
          >
            <span
              class="buttons"
            >
              <span
                aria-label="su-check"
                class="button su-check clickable"
                role="button"
                tabindex="0"
              />
            </span>
            <span
              class="text"
            >
              <div
                aria-label="Page 1"
                class="croppedText"
                title="Page 1"
              >
                <div
                  aria-hidden="true"
                  class="front"
                >
                  Pag
                </div>
                <div
                  aria-hidden="true"
                  class="back"
                >
                  <span>
                    e 1
                  </span>
                </div>
                <div
                  class="whole"
                >
                  Page 1
                </div>
              </div>
            </span>
            <span
              class="indicator"
            />
            <span
              class="children"
            >
              <span
                aria-label="su-angle-right"
                class="su-angle-right"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Render data without edit button 1`] = `
<div
  class="columnListAdapter"
>
  <div
    class="columnListToolbarContainer"
  >
    <div
      class="columnListContainer firstVisibleColumnActive lastVisibleColumnActive"
    >
      <div
        class="columnList"
      >
        <div
          class="column"
        >
          <div
            class="item"
          >
            <span
              class="buttons"
            />
            <span
              class="text"
            >
              <div
                aria-label="Page 1"
                class="croppedText"
                title="Page 1"
              >
                <div
                  aria-hidden="true"
                  class="front"
                >
                  Pag
                </div>
                <div
                  aria-hidden="true"
                  class="back"
                >
                  <span>
                    e 1
                  </span>
                </div>
                <div
                  class="whole"
                >
                  Page 1
                </div>
              </div>
            </span>
            <span
              class="indicator"
            />
            <span
              class="children"
            >
              <span
                aria-label="su-angle-right"
                class="su-angle-right"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Render with add button in toolbar when onAddClick callback is given 1`] = `
<div
  class="columnListAdapter"
>
  <div
    class="columnListToolbarContainer"
  >
    <div
      class="toolbarContainer"
      style="margin-left:0"
    >
      <div
        class="toolbar"
      >
        <div
          class="item primary"
        >
          <span
            aria-label="su-plus-circle"
            class="su-plus-circle"
          />
        </div>
      </div>
    </div>
    <div
      class="columnListContainer firstVisibleColumnActive lastVisibleColumnActive"
    >
      <div
        class="columnList"
      >
        <div
          class="column"
        />
      </div>
    </div>
  </div>
</div>
`;
